disabled-manifests/istio-security.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: core-services
spec:
  mode: STRICT # 👈 STRICT garante que conexões sem criptografia (HTTP puro) sejam REJEITADAS automaticamente
